# multithreaded-sorting-application

./: CMakeLists.txt  Dockerfile  README.md  atividade1.c  dados.txt
.github/workflows/: docker.yml
include/: algoritmos_ordenacao.h  benchmark.h  cli.h  gerador_dados.h  gerar_dados.h  ordenacao_paralela.h
include/algoritmos_ordenacao/: algoritmos_ordenacao.h  bubble.h  counting.h  heap.h  insertion.h  merge.h  quick.h  radix.h  selection.h
src/: algoritmos_ordenacao.cpp  benchmark.cpp  cli.cpp  gerador_dados.cpp  main.cpp  ordenacao_paralela.cpp
src/algoritmos_ordenacao/: algoritmos_ordenacao.cpp  bubble.cpp  counting.cpp  heap.cpp  insertion.cpp  merge.cpp  quick.cpp  radix.cpp  selection.cpp
